traces/bug_493.txt
src/medit/vector.c:524: error: DEAD_STORE
  The value written to &scalemax (type double) is never used.
Showing all 1 steps of the trace


src/medit/vector.c:524:3: Write of unused value
522.   
523.     scalemin = sc->dmax * SCALV;
524.     scalemax = 15*scalemin;
         ^
525.     mesh->mark++;
526.     glLineWidth(3.0);
